[gd_scene load_steps=5 format=3 uid="uid://d2rw87r3735cs"]

[ext_resource type="Theme" uid="uid://depsvw2yaipwl" path="res://main_theme.tres" id="1_w8y2r"]
[ext_resource type="Script" path="res://scenes/ui/stats_ui.gd" id="2_458v6"]
[ext_resource type="Texture2D" uid="uid://oe7v35ii8vrs" path="res://art/tile_0102.png" id="2_f824b"]
[ext_resource type="Texture2D" uid="uid://d0edy7thj8ce6" path="res://art/heart.png" id="3_wukg0"]

[node name="StatsUI" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 20.0
offset_bottom = 16.0
grow_horizontal = 2
theme = ExtResource("1_w8y2r")
alignment = 1
script = ExtResource("2_458v6")

[node name="Block" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BlockImage" type="TextureRect" parent="Block"]
layout_mode = 2
texture = ExtResource("2_f824b")
stretch_mode = 5

[node name="BlockLabel" type="Label" parent="Block"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HealthImage" type="TextureRect" parent="Health"]
layout_mode = 2
texture = ExtResource("3_wukg0")
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "4"
horizontal_alignment = 1
vertical_alignment = 1
